Fix Axis flip in SMLMDatasetclass

--- a/SimulationDefault.ini
+++ b/SimulationDefault.ini
@@ -1,4 +1,4 @@
-[DEFAULT]
+[Temp]
 binary_path = data/test.npz
 image_size = (32, 32)
 upscale_factor = 8
@@ -7,23 +7,37 @@ total_frames = 5
 bg_value = 10
 sigma = 1.5
 poolsize = 10
+use_cuda = True
 
 [CurrentlySet]
-binary_path = 'data/data_32px_up8_1e5.npz'
+binary_path = data/data_32px_up8_1e3.npz
 image_size = (32, 32)
 upscale_factor = 8
 emitter_p_frame = 15
-total_frames = 100000
+total_frames = 1000
 bg_value = 10
 sigma = 1.5
 poolsize = 10
+use_cuda = True
 
-[SingleSampleSingleCore]
-binary_path = 'data/singleSample.npz'
+[TestSet]
+binary_path = data/test_32px_up8_1e3.npz
 image_size = (32, 32)
-upscale_factor = 1
+upscale_factor = 8
 emitter_p_frame = 15
-total_frames = 1
+total_frames = 1000
+bg_value = 10
+sigma = 1.5
+poolsize = 10
+use_cuda = True
+
+[DEFAULT]
+binary_path = data/test.npz
+image_size = (32, 32)
+upscale_factor = 8
+emitter_p_frame = 15
+total_frames = 10
 bg_value = 10
 sigma = 1.5
 poolsize = 1
+use_cuda = False
