Change Axis order, cleanup

--- a/SimulationDefault.ini
+++ b/SimulationDefault.ini
@@ -1,4 +1,4 @@
-[Temp]
+[DEFAULT]
 binary_path = data/test.npz
 image_size = (32, 32)
 upscale_factor = 8
@@ -10,34 +10,45 @@ poolsize = 10
 use_cuda = True
 
 [CurrentlySet]
-binary_path = data/data_32px_up8_1e3.npz
+binary_path = data/data_32px_up8_1e4.npz
 image_size = (32, 32)
 upscale_factor = 8
 emitter_p_frame = 15
-total_frames = 1000
+total_frames = 10000
 bg_value = 10
 sigma = 1.5
 poolsize = 10
 use_cuda = True
 
-[TestSet]
-binary_path = data/test_32px_up8_1e3.npz
-image_size = (32, 32)
-upscale_factor = 8
-emitter_p_frame = 15
-total_frames = 1000
-bg_value = 10
-sigma = 1.5
-poolsize = 10
-use_cuda = True
-
-[DEFAULT]
-binary_path = data/test.npz
+[SmallTest]
+binary_path = data/temp.npz
 image_size = (32, 32)
 upscale_factor = 8
 emitter_p_frame = 15
 total_frames = 10
 bg_value = 10
 sigma = 1.5
-poolsize = 1
+poolsize = 10
+use_cuda = True
+
+[TestSet]
+binary_path = data/test_32px_up8_1e4.npz
+image_size = (32, 32)
+upscale_factor = 8
+emitter_p_frame = 15
+total_frames = 10000
+bg_value = 10
+sigma = 1.5
+poolsize = 10
+use_cuda = True
+
+[BigDataTraining]
+binary_path = data/data_32px_up8_5e4.npz
+image_size = (32, 32)
+upscale_factor = 8
+emitter_p_frame = 15
+total_frames = 50000
+bg_value = 10
+sigma = 1.5
+poolsize = 10
 use_cuda = False
