Include adjacent frames in SMLM_Dataset

--- a/SimulationDefault.ini
+++ b/SimulationDefault.ini
@@ -1,5 +1,6 @@
 [DEFAULT]
 binary_path = data/test.npz
+positions_csv = None
 image_size = (32, 32)
 upscale_factor = 8
 emitter_p_frame = 15
@@ -11,6 +12,7 @@ use_cuda = True
 
 [CurrentlySet]
 binary_path = data/data_32px_up8_1e4.npz
+positions_csv = None
 image_size = (32, 32)
 upscale_factor = 8
 emitter_p_frame = 15
@@ -22,6 +24,7 @@ use_cuda = True
 
 [SmallTest]
 binary_path = data/temp.npz
+positions_csv = None
 image_size = (32, 32)
 upscale_factor = 8
 emitter_p_frame = 15
@@ -33,6 +36,7 @@ use_cuda = True
 
 [TestSet]
 binary_path = data/test_32px_up8_1e4.npz
+positions_csv = None
 image_size = (32, 32)
 upscale_factor = 8
 emitter_p_frame = 15
@@ -44,6 +48,7 @@ use_cuda = True
 
 [BigDataTraining]
 binary_path = data/data_32px_up8_5e4.npz
+positions_csv = None
 image_size = (32, 32)
 upscale_factor = 8
 emitter_p_frame = 15
