Before Cleaning up code

--- a/SimulationDefault.ini
+++ b/SimulationDefault.ini
@@ -9,6 +9,7 @@ bg_value = 10
 sigma = 1.5
 poolsize = 10
 use_cuda = True
+dimension = 2
 
 [CurrentlySet]
 binary_path = data/data_32px_up8_1e4.npz
@@ -21,6 +22,7 @@ bg_value = 10
 sigma = 1.5
 poolsize = 10
 use_cuda = True
+dimension = 2
 
 [SmallTest]
 binary_path = data/temp.npz
@@ -33,6 +35,7 @@ bg_value = 10
 sigma = 1.5
 poolsize = 10
 use_cuda = True
+dimension = 2
 
 [TestSet]
 binary_path = data/test_32px_up8_1e4.npz
@@ -45,6 +48,7 @@ bg_value = 10
 sigma = 1.5
 poolsize = 10
 use_cuda = True
+dimension = 2
 
 [BigDataTraining]
 binary_path = data/data_32px_up8_5e4.npz
@@ -57,3 +61,4 @@ bg_value = 10
 sigma = 1.5
 poolsize = 10
 use_cuda = False
+dimension = 2
