--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install::
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   # Useful for debugging any issues with conda
-  - conda info -a
+  # - conda info -a
 
 # create conda env from requirements file
   - conda env create -f --yes environment.yml
