--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
   - "3.6"
 
+  before_install:
+    - pip install --upgrade pip
+
 # command to install dependencies
 install:
   - pip install -r requirements.txt
