--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,8 @@
-matrix:
-  include:
-    # works on Precise and Trusty
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-4.9
-      env:
-         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
+dist: xenial
 
 language: python
 python:
   - "3.6"
-
-before_install:
-  - eval "${MATRIX_EVAL}"
-
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - gcc-4.9
-      - g++-4.9
 
 install:
   - sudo apt-get update
