--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   # - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
   - conda env create -q -f environment.yml
-  - source activate deepsmlm
+  - source activate deepsmlm_deployed
 
   # build the C and C++ libraries
   - cd $TRAVIS_BUILD_DIR/deepsmlm/cpp_src/libtorchInterface
