--- a/environment.yml
+++ b/environment.yml
@@ -4,10 +4,12 @@ channels:
   - anaconda
   - conda-forge
   - anaconda-fusion
+  - pyviz
   - defaults
 
 dependencies:
   - bokeh
+  - holoviews
   - intel-openmp
   - jupyter_contrib_nbextensions
   - jupyterlab
