--- a/environment_cuda10.yml
+++ b/environment_cuda10.yml
@@ -24,7 +24,7 @@ dependencies:
   - opencv
   - pillow
   - python=3.6
-  - pytorch=1.2.0
+  - pytorch=1.2.*
   - pytest
   - pywavelets
   - scikit-image
@@ -34,6 +34,8 @@ dependencies:
   - scikit-learn
   - snakeviz
   - sqlite
+  - tensorflow
+  - tensorboard
   - tifffile
   - torchvision
   - tqdm
