Update CMAKE Lists

--- a/deepsmlm/cpp_src/CMakeLists.txt
+++ b/deepsmlm/cpp_src/CMakeLists.txt
@@ -9,6 +9,6 @@ target_include_directories(spline_psf PUBLIC include)
 target_compile_features(spline_psf PUBLIC c_std_99)
 
 add_library(multi_crlb STATIC src/multi_crlb.cpp)
-target_include_directories(multi_crlb PUBLIC include "/Users/lucasmueller/Documents/Development/CPP/libraries/eigen-eigen-323c052e1731")
+target_include_directories(multi_crlb PUBLIC include lib/eigen)
 target_compile_features(multi_crlb PUBLIC cxx_std_11)
 # target_link_libraries (multi_crlb Eigen3::Eigen)
