--- a/deepsmlm/cpp_src/test/CMakeLists.txt
+++ b/deepsmlm/cpp_src/test/CMakeLists.txt
@@ -14,10 +14,10 @@ add_library(spline_psf STATIC ../src/spline_psf.c) #include/spline_psf.h)
 target_include_directories(spline_psf PUBLIC ../include)
 target_compile_features(spline_psf PUBLIC c_std_99)
 
-add_executable(test_out test_spline.cpp)
-target_link_libraries(test_out Catch2 spline_psf)
-target_include_directories(test_out PUBLIC ../include)
-target_compile_features(test_out PUBLIC cxx_std_11)
+add_executable(test_spline test_spline.cpp)
+target_link_libraries(test_spline Catch2 spline_psf)
+target_include_directories(test_spline PUBLIC ../include)
+target_compile_features(test_spline PUBLIC cxx_std_11)
 
 # add_library(torch_cubic STATIC ../src/torch_cubicspline.cpp) #include/spline_psf.h)
 # target_include_directories(torch_cubic PUBLIC ../include)
