Update Param Handling

--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - bokeh
   - click
   - comet_ml
+  - dotmap
   - holoviews
   - intel-openmp
   - jupyter_contrib_nbextensions
@@ -24,6 +25,7 @@ dependencies:
   - pillow
   - python=3.6
   - pytorch=1.2.*
+  - pyyaml
   - pytest
   - pywavelets
   - scikit-image
