--- a/environment_cuda10.yml
+++ b/environment_cuda10.yml
@@ -13,6 +13,7 @@ dependencies:
   - click
   - comet_ml
   - cudatoolkit=10.0
+  - dotmap
   - holoviews
   - intel-openmp
   - jupyter_contrib_nbextensions
@@ -23,6 +24,7 @@ dependencies:
   - numpy
   - opencv
   - pillow
+  - pyyaml
   - python=3.6
   - pytorch=1.2.*
   - pytest
