--- a/deepsmlm/cpp_src/CMakeLists.txt
+++ b/deepsmlm/cpp_src/CMakeLists.txt
@@ -1,16 +1,25 @@
-cmake_minimum_required(VERSION 3.15)
-project(deepsmlm_cpp)
+cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
 
-# adds the preprocessor DEBUG when CMAKE_BUILD_TYPE=Debug
-add_compile_options("$<$<CONFIG:DEBUG>:-DDEBUG>")
+project(splininger LANGUAGES CUDA CXX)
 
-add_library(spline_psf STATIC src/spline_psf.c)
-target_include_directories(spline_psf PUBLIC include)
-target_compile_features(spline_psf PUBLIC c_std_99)
-set_property(TARGET spline_psf PROPERTY POSITION_INDEPENDENT_CODE ON)  # otherwise I get an error when compiling the extension
+find_package(CUDA REQUIRED)
+find_package(PythonInterp 3.6 REQUIRED)
+find_package(PythonLibs 3.6 REQUIRED)
 
-add_library(multi_crlb STATIC src/multi_crlb.cpp)
-target_include_directories(multi_crlb PUBLIC include lib/eigen)
-target_compile_features(multi_crlb PUBLIC cxx_std_11)
-target_link_libraries (multi_crlb spline_psf)
-set_property(TARGET multi_crlb PROPERTY POSITION_INDEPENDENT_CODE ON)  # otherwise I get an error when compiling the extension
+add_library(spline_psf_cu_impl SHARED src/spline_psf_gpu.cu)
+target_include_directories(spline_psf_cu_impl PUBLIC include)
+target_compile_features(spline_psf_cu_impl PUBLIC cxx_std_11)
+set_target_properties(spline_psf_cu_impl PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+target_compile_options(spline_psf_cu_impl PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:
+                       -rdc=true
+                       --gpu-architecture=sm_50
+                       --expt-relaxed-constexpr
+                       >)
+
+add_subdirectory(lib/pybind11)
+
+link_directories(/usr/local/cuda/lib64)
+include_directories("${CUDA_INCLUDE_DIRS}")
+
+pybind11_add_module(spline_psf_cuda src/pybind_spline.cpp)
+target_link_libraries(spline_psf_cuda PRIVATE spline_psf_cu_impl)
