Running through thingy

--- a/deepsmlm/cpp_src/CMakeLists.txt
+++ b/deepsmlm/cpp_src/CMakeLists.txt
@@ -6,13 +6,15 @@ find_package(CUDA REQUIRED)
 find_package(PythonInterp 3.6 REQUIRED)
 find_package(PythonLibs 3.6 REQUIRED)
 
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --gpu-architecture=sm_50")
+
 add_library(spline_psf_cu_impl SHARED src/spline_psf_gpu.cu)
 target_include_directories(spline_psf_cu_impl PUBLIC include)
 target_compile_features(spline_psf_cu_impl PUBLIC cxx_std_11)
 set_target_properties(spline_psf_cu_impl PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 target_compile_options(spline_psf_cu_impl PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:
                        -rdc=true
-                       --gpu-architecture=sm_50
+                    #    --gpu-architecture=sm_50
                        --expt-relaxed-constexpr
                        >)
 
