--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,10 @@ install:
   - cd $TRAVIS_BUILD_DIR/deepsmlm/cpp_src
   - python setup.py install
 
+  # download the test assets
+  - cd $TRAVIS_BUILD_DIR/deepsmlm/test/assets
+  - wget -O bead_cal_for_testing.mat https://oc.embl.de/index.php/s/YXUydyaXLlKc3UY/download
+
   - cd $TRAVIS_BUILD_DIR
 
 script:
