--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ install:
 
   # Replace dep1 dep2 ... with your dependencies
   # - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
-  - conda env create -q -f environment.yml
-  - source activate deepsmlm_deployed
+  - conda env create -q -f environment_cpu_py38_pt14.yml
+  - source activate deepsmlm_py38_pt14
   - pip install tensorboardX
 
   # build the C and C++ libraries
