--- a/conda/conda_build_config.yaml
+++ b/conda/conda_build_config.yaml
@@ -18,4 +18,9 @@ cxx_compiler_version:
     - 4                                # [osx]
 
 python:
+    - 3.6
+    - 3.7
     - 3.8
+
+numpy:
+    - 1.18
