--- a/conda/deepSMLM/meta.yaml
+++ b/conda/deepSMLM/meta.yaml
@@ -1,47 +1,55 @@
 package:
   name: deepsmlm
-  version: 0.0
+  version: 0.1
 
 source:
-        #git_url: https://github.com/Haydnspass/DeepSMLM
-        #git_rev: dev_training_engine
-    - path: ~/Projects/DeepSMLM
+    #git_url: https://github.com/Haydnspass/DeepSMLM
+    #git_rev: dev_training_engine
+    - path: ~/RemoteDeploy/DeepSMLM
+    # - path: ~/Repositories/deepsmlm
 
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - python {{ python }}
-    - cmake >=3.2
+    - cmake >=3.14
     - ninja
+    - setuptools
+
   host:
     - python {{ python }}
-    - pybind11 >=2.4
-    - numpy >=1.14
-    - h5py >=2.9
-    - scipy >=1.2
-    - matplotlib >=3.0
-    - tqdm >=4.30
+    - numpy {{ numpy }}
+    # - cudatoolkit=10.1
+    - cudatoolkit-dev
+
   run:
     - {{ pin_compatible('python', max_pin='x.x') }}
     - {{ pin_compatible('numpy', max_pin='x.x') }}
+    - cudatoolkit=10.1  # later on with cuda 'optional' dependency
+    - dotmap
+    - pytorch=1.4
+    - torchvision
+    - click
+    - deprecated
+    - dotmap
+    - h5py
+    - joblib
+    - matplotlib
+    - scipy
+    - seaborn
+    - scikit-learn
+    - tifffile
+    - tqdm
 
-      # test:
-      #   imports:
-      #     - numpy
-      #   requires:
-      #     - pytest
-      #   commands:
-      #     - export PYLIB_EXT=`$PYTHON -c 'import sysconfig as s; print(s.get_config_var("EXT_SUFFIX"))'`
-
-
-files:
-    - $PREFIX/lib/python{{ PY_VER }}/site-packages/adcc*
-    - $PREFIX/lib/python{{ PY_VER }}/site-packages/libadcc*
-
+  test:
+    requires:
+      - pytest
+    commands:
+      - pytest --pyargs deepsmlm
 
 about:
-    # home: homepage url
+    home: https://rieslab.de
     # dev_url: github url 
     # doc_url: doc url
     # license: GPL-3.0
