--- a/conda/deepSMLM/meta.yaml
+++ b/conda/deepSMLM/meta.yaml
@@ -1,11 +1,12 @@
 package:
   name: deepsmlm
-  version: 0.1
+  version: "0.1.dev"
 
 source:
-    #git_url: https://github.com/Haydnspass/DeepSMLM
-    #git_rev: dev_training_engine
-    - path: ~/RemoteDeploy/DeepSMLM
+    git_url: https://github.com/Haydnspass/DeepSMLM
+    git_rev: dev_training_engine
+    git_depth: 1
+    # - path: ~/RemoteDeploy/DeepSMLM
     # - path: ~/Repositories/deepsmlm
 
 requirements:
@@ -20,13 +21,13 @@ requirements:
   host:
     - python {{ python }}
     - numpy {{ numpy }}
-    # - cudatoolkit=10.1
-    - cudatoolkit-dev
+    - pybind11 >=2.4
+    - cudatoolkit-dev # [linux]
 
   run:
     - {{ pin_compatible('python', max_pin='x.x') }}
     - {{ pin_compatible('numpy', max_pin='x.x') }}
-    - cudatoolkit=10.1  # later on with cuda 'optional' dependency
+    - cudatoolkit=10.1  # [linux]
     - dotmap
     - pytorch=1.4
     - torchvision
@@ -36,6 +37,8 @@ requirements:
     - h5py
     - joblib
     - matplotlib
+    - pytest
+    - pyyaml
     - scipy
     - seaborn
     - scikit-learn
@@ -45,7 +48,9 @@ requirements:
   test:
     requires:
       - pytest
+      - wget
     commands:
+      - wget -O {{ SRC_DIR }}/deepsmlm/test/assets/bead_cal_for_testing.mat https://oc.embl.de/index.php/s/YXUydyaXLlKc3UY/download
       - pytest --pyargs deepsmlm
 
 about:
