Update build config and some other unfishiehd stuff

--- a/conda/conda_build_config.yaml
+++ b/conda/conda_build_config.yaml
@@ -8,14 +8,14 @@ cxx_compiler:
 target_platform:
     - osx-64                           # [osx]
     - linux-64                         # [linux]
-CONDA_BUILD_SYSROOT:
-    - /Users/travis/MacOSX10.9.sdk     # [osx]
+# CONDA_BUILD_SYSROOT:
+#     - /Users/travis/MacOSX10.9.sdk     # [osx]
 c_compiler_version:
     - 7.3.0                            # [linux]
-    - 4                                # [osx]
+    - 9                                # [osx]
 cxx_compiler_version:
     - 7.3.0                            # [linux]
-    - 4                                # [osx]
+    - 9                                # [osx]
 
 python:
     - 3.6
