--- a/environment_cuda101_py38_pt14.yml
+++ b/environment_cuda101_py38_pt14.yml
@@ -2,21 +2,19 @@ name: deepsmlm_cuda
 channels:
   - pytorch
   - conda-forge
-  - anaconda
-  - anaconda-fusion
+  # - anaconda
+  # - anaconda-fusion
   - comet_ml
-  - pyviz
+  # - pyviz
   - defaults
 
 dependencies:
-  - bokeh
   - click
   - cmake=3.15
   - comet_ml
   - cudatoolkit=10.1
   - deprecated
   - dotmap
-  - holoviews
   - h5py
   - intel-openmp
   - jupyter_contrib_nbextensions
@@ -24,24 +22,17 @@ dependencies:
   - nb_conda
   - matplotlib
   - ninja
-  - nodejs
   - numpy
-  - opencv
-  - pillow
-  - pyyaml
   - python=3.8
   - pytorch=1.4.*
   - pytest
   - pytest-repeat
-  - pywavelets
   - scikit-image
   - scipy
   - seaborn
   - setuptools
   - scikit-learn
-  - snakeviz
   - sqlite
   - tifffile
-  - tikzplotlib
   - torchvision
   - tqdm
