--- a/environment_cuda101_py38_pt14.yml
+++ b/environment_cuda101_py38_pt14.yml
@@ -2,10 +2,7 @@ name: deepsmlm_cuda
 channels:
   - pytorch
   - conda-forge
-  # - anaconda
-  # - anaconda-fusion
   - comet_ml
-  # - pyviz
   - defaults
 
 dependencies:
@@ -23,8 +20,10 @@ dependencies:
   - matplotlib
   - ninja
   - numpy
+  - pybind11>=2.4
   - python=3.8
   - pytorch=1.4.*
+  - pyyaml
   - pytest
   - pytest-repeat
   - scikit-image
