--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   # - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
   - conda env create -q -f environment_cpu_py38_pt14.yml
-  - source activate deepsmlm_cpu
-#  - pip install tensorboardX
+  - conda activate deepsmlm_cpu
 
   # build the C and C++ libraries
   - cd $TRAVIS_BUILD_DIR
