--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ install:
 
   # Replace dep1 dep2 ... with your dependencies
   # - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
+  - conda init bash
+  - conda config --set channel_priority strict
   - conda env create -q -f environment_cpu_py38_pt14.yml
   - conda activate deepsmlm_cpu
 
