--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ install:
   - sudo apt-get update
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
+  - source "$HOME/miniconda/etc/profile.d/conda.sh"
+#  - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
@@ -17,10 +18,9 @@ install:
   # - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
   - conda config --set channel_priority strict
   - conda env create -q -f environment_cpu_py38_pt14.yml
-  - source activate deepsmlm_cpu
+  - conda activate deepsmlm_cpu
 
   # build the C and C++ libraries
-  - cd $TRAVIS_BUILD_DIR
   - python setup.py install
 
 script:
