--- a/environment_cpu_py38_pt14.yml
+++ b/environment_cpu_py38_pt14.yml
@@ -22,7 +22,7 @@ dependencies:
   - opencv
   - pandas
   - pybind11>=2.4
-  - python=3.6
+  - python=3.8
   - pytorch=1.4.*
   - pyyaml
   - pytest
@@ -34,7 +34,7 @@ dependencies:
   - setuptools
   - scikit-learn
   - sqlite
-  - tensorboard>=1.14
+  - tensorboard
   - tifffile
   - torchvision
   - tqdm
